--- a/templates/post.html
+++ b/templates/post.html
@@ -2,10 +2,13 @@
     <section class="header">
         Posted on $date$
         $if(author)$
-            by $author$
+        by $author$
         $endif$
     </section>
     <section>
         $body$
     </section>
+    <script src="https://utteranc.es/client.js" repo="berberman/space" issue-term="pathname" theme="github-light"
+        crossorigin="anonymous" async>
+        </script>
 </article>
