--- a/css/default.css
+++ b/css/default.css
@@ -31,12 +31,35 @@ footer {
   color: #555;
 }
 
+p {
+  line-height: 1.6;
+  font-size: 17px;
+}
+
+section, h1 {
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI',
+    Roboto, Helvetica, Arial, sans-serif, 'Apple Color Emoji',
+    'Segoe UI Emoji', 'Segoe UI Symbol';
+}
+
 h1 {
   font-size: 2.4rem;
 }
 
 h2 {
   font-size: 2rem;
+}
+
+code {
+  background-color: #eee;
+  font-family: 'SF Mono', SFMono-Regular, Consolas,
+    'Liberation Mono', Menlo, Courier, monospace;
+}
+
+pre > code {
+  display: block;
+  overflow: auto;
+  padding: 3px 5px;
 }
 
 article .header {
