--- a/css/default.css
+++ b/css/default.css
@@ -72,11 +72,11 @@ blockquote{
   border-left: .25em solid #dfe2e5;
 }
 
-/*pre > code {
+pre > code {
   display: block;
   overflow: auto;
   padding: 12px;
-}*/
+}
 
 article .header {
   font-size: 1.4rem;
@@ -183,7 +183,7 @@ article .header {
 a.sourceLine { display: inline-block; line-height: 1.25; }
 a.sourceLine { pointer-events: none; color: inherit; text-decoration: inherit; }
 a.sourceLine:empty { height: 1.2em; }
-.sourceCode { overflow: visible; }
+.sourceCode { overflow: visible; background-color: unset; }
 code.sourceCode { white-space: pre; position: relative; }
 div.sourceCode { margin: 1em 0; }
 pre.sourceCode { margin: 0; }
